new file for practice

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
         <a href="practis.html"><h3 class="wrapper">practice</h3></a>
       </nav>
     </header>
-    <h1>Javascript</h1>
-    <div class="wrapper">
+    <h1>Javascript part 2</h1>
+    <div class="middel">
       <h2 class="localStorage">Add to local storage</h2>
+      <p>Add to local storage get items from localstorage and clear them</p>
     </div>
     <div class="wrapper">
       <input type="text" id="inputkey" placeholder="write input Key" />
@@ -28,6 +29,6 @@
       <span class="displayValue"></span>
       <span class="getValue"></span>
     </div>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
