--- a/practis.html
+++ b/practis.html
@@ -14,5 +14,9 @@
         <a href="practis.html"><h3 class="wrapper">practice</h3></a>
       </nav>
     </header>
+    <main>
+      <h1 class="localstorage wrapper">practice</h1>
+    </main>
+    <script src="Js/practice.js"></script>
   </body>
 </html>
