updating_branch and code

--- a/practis.html
+++ b/practis.html
@@ -14,8 +14,9 @@
         <a href="practis.html"><h3 class="wrapper">practice</h3></a>
       </nav>
     </header>
-    <main>
+    <main class="middel">
       <h1 class="localstorage wrapper">practice</h1>
+      <p>Please open the CONSOLE and see what is logged</p>
     </main>
     <script src="Js/practice.js"></script>
   </body>
