--- a/practis.html
+++ b/practis.html
@@ -17,6 +17,10 @@
     <main class="middel">
       <h1 class="localstorage wrapper">practice</h1>
       <p>Please open the CONSOLE and see what is logged</p>
+      <div>
+        <p>list of filter results</p>
+        <div class="list"></div>
+      </div>
     </main>
     <script src="Js/practice.js"></script>
   </body>
