--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
       <button id="cta-localstorage">Add to localstorage</button>
       <button id="cta-localstorage_2">Clear storage</button>
     </div>
+    <p class="wrapper">Items will display once you add to local localStorage</p>
     <div class="wrapper">
       <span class="displayValue"></span>
+
       <span class="getValue"></span>
     </div>
     <script src="js/script.js"></script>
