array page made

--- a/practis.html
+++ b/practis.html
@@ -10,8 +10,9 @@
   <body>
     <header>
       <nav class="wrapper">
-        <a href="index.html"><h3 class="wrapper">back to home page</h3></a>
-        <a href="practis.html"><h3 class="wrapper">practice</h3></a>
+        <a href="index.html"><span class="wrapper">back to home page</span></a>
+        <a href="practis.html"><span class="wrapper">practice</span></a>
+        <a href="practis.html"><span class="wrapper">Array</span></a>
       </nav>
     </header>
     <main class="middel">
