--- a/array.html
+++ b/array.html
@@ -12,26 +12,28 @@
       <nav class="wrapper">
         <a href="index.html"><span class="wrapper">Home page</span></a>
         <a href="practis.html"><span class="wrapper">practice</span></a>
-        <a href="practis.html"><span class="wrapper">Array</span></a>
+        <a href="array.html"><span class="wrapper">Array</span></a>
       </nav>
     </header>
-    <h1>Javascript part 2</h1>
-    <div class="middel">
-      <h2 class="localStorage">Add to local storage</h2>
-      <p>Add to local storage get items from localstorage and clear them</p>
+    <h1>Javascript part 2 Array methods</h1>
+    <h2>Foreach, filter, reduce, find</h2>
+    <form action="index.html" method="get">
+      <input type="text" id="search" placeholder="Search your card" />
+    </form>
+    <div class="warapper">
+      <button id="cta-localstorage_2" class="all">ALL</button>
+      <button id="cta-localstorage_2" class="archi">Architecture</button>
+      <button id="cta-localstorage_2" class="design">Design</button>
+      <button id="cta-localstorage_2" class="coding">Coding</button>
     </div>
     <div class="wrapper">
-      <input type="text" id="inputkey" placeholder="write input Key" />
-      <input type="text" id="inputvalue" placeholder="write value" />
-      <button id="cta-localstorage">Add to localstorage</button>
-      <button id="cta-localstorage_2">Clear storage</button>
+      <div class="box"></div>
     </div>
-    <p class="wrapper">Items will display once you add to local localStorage</p>
     <div class="wrapper">
-      <span class="displayValue"></span>
+      <div class="box_1"></div>
+    </div>
 
-      <span class="getValue"></span>
-    </div>
-    <script src="js/script.js"></script>
+    <p class="wrapper"></p>
+    <script src="js/array.js " type="module"></script>
   </body>
 </html>
