--- a/practis.html
+++ b/practis.html
@@ -12,7 +12,7 @@
       <nav class="wrapper">
         <a href="index.html"><span class="wrapper">back to home page</span></a>
         <a href="practis.html"><span class="wrapper">practice</span></a>
-        <a href="practis.html"><span class="wrapper">Array</span></a>
+        <a href="array.html"><span class="wrapper">Array</span></a>
       </nav>
     </header>
     <main class="middel">
