--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <nav class="wrapper">
         <a href="index.html"><span class="wrapper">Home page</span></a>
         <a href="practis.html"><span class="wrapper">practice</span></a>
-        <a href="practis.html"><span class="wrapper">Array</span></a>
+        <a href="array.html"><span class="wrapper">Array</span></a>
       </nav>
     </header>
     <h1>Javascript part 2</h1>
