updating my repo with filter

--- a/array.html
+++ b/array.html
@@ -15,12 +15,19 @@
         <a href="array.html"><span class="wrapper">Array</span></a>
       </nav>
     </header>
-    <h1>Javascript part 2 Array methods</h1>
-    <h2>Foreach, filter, reduce, find</h2>
-    <form action="index.html" method="get">
-      <input type="text" id="search" placeholder="Search your card" />
-    </form>
-    <div class="warapper">
+    <div class="center">
+      <h1>Javascript part 2 Array methods</h1>
+      <p>Foreach, filter, reduce, find</p>
+    </div>
+
+    <div class="wrapper">
+      <form action="index.html" method="get">
+        <label for="text">Find your icon</label>
+        <input type="text" id="search" placeholder="Search your card" />
+      </form>
+    </div>
+
+    <div class="wrapper">
       <button id="cta-localstorage_2" class="all">ALL</button>
       <button id="cta-localstorage_2" class="archi">Architecture</button>
       <button id="cta-localstorage_2" class="design">Design</button>
