--- a/array.html
+++ b/array.html
@@ -16,19 +16,22 @@
       </nav>
     </header>
     <div class="center">
-      <h1>Javascript part 2 Array methods</h1>
-      <p>Foreach, filter, reduce, find</p>
+      <h1>
+        Javascript part 2 , Array methods practice page for Array methods.
+      </h1>
+
+      <p>Array methods. like foreach and filter in the first</p>
     </div>
 
     <div class="wrapper">
       <form action="index.html" method="get">
-        <label for="text">Find your icon</label>
+        <label for="text"> practice for Array methods Find your icon</label>
         <input type="text" id="search" placeholder="Search your card" />
       </form>
     </div>
 
     <div class="wrapper">
-      <button id="cta-localstorage_2" class="all">ALL</button>
+      <button id="cta-localstorage_2" class="all">Click ALL</button>
       <button id="cta-localstorage_2" class="archi">Architecture</button>
       <button id="cta-localstorage_2" class="design">Design</button>
       <button id="cta-localstorage_2" class="coding">Coding</button>
@@ -39,8 +42,18 @@
     <div class="wrapper">
       <div class="box_1"></div>
     </div>
-
-    <p class="wrapper"></p>
+    <div class="wrapper">
+      <h2>project Map and reduce Array method</h2>
+      <p>Array methods. like Map and reduce in the first</p>
+    </div>
+    <div class="wrapper">
+      <button id="cta-localstorage_2" class="reduce">Reduce</button>
+    </div>
+    <div class="reduce_1"></div>
+    <div class="wrapper">
+      <button id="cta-localstorage_2" class="map">map</button>
+    </div>
+    <div class="map_1"></div>
     <script src="js/array.js " type="module"></script>
   </body>
 </html>
