--- a/array.html
+++ b/array.html
@@ -13,6 +13,7 @@
         <a href="index.html"><span class="wrapper">Home page</span></a>
         <a href="practis.html"><span class="wrapper">practice</span></a>
         <a href="array.html"><span class="wrapper">Array</span></a>
+        <a href="find.html"><span class="wrapper">find</span></a>
       </nav>
     </header>
     <div class="center">
