--- a/array.html
+++ b/array.html
@@ -55,6 +55,6 @@
       <button id="cta-localstorage_2" class="map">map</button>
     </div>
     <div class="map_1"></div>
-    <script src="js/test.js " type="module"></script>
+    <script src="js/array.js " type="module"></script>
   </body>
 </html>
