--- a/array.html
+++ b/array.html
@@ -31,11 +31,19 @@
       </form>
     </div>
 
-    <div class="wrapper">
-      <button id="cta-localstorage_2" class="all">Click ALL</button>
-      <button id="cta-localstorage_2" class="archi">Architecture</button>
-      <button id="cta-localstorage_2" class="design">Design</button>
-      <button id="cta-localstorage_2" class="coding">Coding</button>
+    <div class="wrapper" id="buttonContainer">
+      <button id="cta-localstorage_2" class="all" data-category>
+        Click ALL
+      </button>
+      <button id="cta-localstorage_2" class="archi" data-category>
+        Architecture
+      </button>
+      <button id="cta-localstorage_2" class="design" data-category>
+        Design
+      </button>
+      <button id="cta-localstorage_2" class="coding" data-category>
+        Coding
+      </button>
     </div>
     <div class="wrapper">
       <div class="box"></div>
