--- a/find.html
+++ b/find.html
@@ -23,7 +23,8 @@
         <p>list of Find results</p>
         <div class="list"></div>
       </div>
+      <div class="row"></div>
     </main>
-    <script src="js/find.js"></script>
+    <script src="js/testapi.js"></script>
   </body>
 </html>
