--- a/index.html
+++ b/index.html
@@ -32,6 +32,43 @@
 
       <span class="getValue"></span>
     </div>
+
+    <!--  -->
+    <div class="container hero_section">
+      <div class="row">
+        <div class="col-12 col-md-12 col-sm-12">
+          <div class="d-flex justify-content-center align-items-center">
+            <div class="card post_box m-2">
+              <div class="name">
+                <img
+                  src="/image/profile/main-profile.png"
+                  alt="profile picture"
+                  class="card_img"
+                />
+                <span class="fw-bold text-muted">Mike_Bike</span>
+                <span class="text-muted">23 min ago..</span>
+              </div>
+              <div>
+                <p class="m-2 p-2">
+                  i want to tell you this is my first time with scss and
+                  bootstrap, its quit a lot to go through, many different
+                  classes, and it was not easy to target and understand quick, i
+                  am doing my best to make UI for this assignment.
+                  <span class="fw-bold"> Massage for teacher</span>
+                </p>
+
+                <button class="cta_btn">Like</button>
+                <button class="cta_btn">Comment</button>
+                <button class="cta_btn">Share</button>
+              </div>
+            </div>
+          </div>
+          <!-- card made and finished here -->
+        </div>
+      </div>
+    </div>
+    <!--  -->
+
     <script src="js/script.js"></script>
   </body>
 </html>
